2002-05-14  Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>

	Fixes #81150 (patch integrated by Federico Mena Quintero
	<federico@ximian.com>).

	* configure.in: Check for new functions in gtk
	* libgnomeui/gnome-client.c (client_set_restart_command): Save the
	screen number in restart command 

2002-05-21  Federico Mena Quintero  <federico@ximian.com>

	Accessibility support for libgnomeui, by several people at Ximian.

	* libgnomeui/libgnomeui-access.[ch]: New files with utility
	functions for accessibility.

	* libgnomeui/Makefile.am (libgnomeui_2_la_SOURCES): Added
	libgnomeui-access.[ch].

	* libgnomeui/gnome-color-picker.c
	(gnome_color_picker_instance_init): Added ATK name/description.

	* libgnomeui/gnome-dateedit.c (create_children): Added ATK
	name/description/relations.

	* libgnomeui/gnome-file-entry.c (gnome_file_entry_init): Added ATK
	name/description/relation.

	* libgnomeui/gnome-href.c (gnome_href_instance_init): Added ATK
	name/description.

	* libgnomeui/gnome-icon-entry.c (ientry_browse): Added ATK
	name/description.
	(gnome_icon_entry_instance_init): Likewise.

	* libgnomeui/gnome-icon-list.c: Implemented accessibility
	interfaces for the icon list widget.

	* libgnomeui/gnome-icon-sel.c (gnome_icon_selection_show_icons):
	Added ATK relation.

	* libgnomeui/gnome-pixmap-entry.c (refresh_preview): Added ATK
	name/description.

Mon May 20 17:07:42 2002  George Lebl <jirka@5z.com>

	* configure.in: add cs to languages

2002-05-20  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 1.117.1

2002-05-17  Anders Carlsson  <andersca@gnu.org>

	* libgnomeui/gnome-icon-item.c: (gnome_icon_text_item_draw):
	Draw focus correctly.
	
	* libgnomeui/gnome-icon-list.c: 
	Select the first item on focus-in, also make cursor handling a bit
	more sane. Fixes #81142, reported by Glynn Foster.
	
2002-05-17  Mark McLoughlin  <mark@skynet.ie>

	* libgnomeui/gnome-ui-init.c: (libgnomeui_rc_parse): since