@@ -523,8 +523,10 @@ browse_clicked(GnomeFileEntry *fentry)
 				 ! fentry->_priv->directory_entry);
 
 	p = build_filename (fentry);
-	gtk_file_selection_set_filename (fs, p);
-	g_free (p);
+	if (p != NULL) {
+		gtk_file_selection_set_filename (fs, p);
+		g_free (p);
+	}
 
 	g_signal_connect (fs->ok_button, "clicked",
 			  G_CALLBACK (browse_dialog_ok),
